--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+    .primary-btn {
+        @apply bg-primary font-semibold px-6 py-3 rounded-full hover:!scale-110 hover:!shadow-xl duration-300;
+    }
+}
+
 body {
     font-family: 'Poppins', sans-serif;
 }
